mapstruct, tests